--- a/index.html
+++ b/index.html
@@ -5,35 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/styles.css" />
-    <title>Document</title>
+    <title>Interactive rating component practice html css js vanilla</title>
   </head>
   <body>
-    <section class="card-wrapper">
-      <div class="card-content">
-        <div class="card-image">
-          <img src="images/icon-star.svg" alt="star-icon" />
+    <main>
+      <section class="card-wrapper">
+        <div class="card-content">
+          <div class="card-image">
+            <img src="images/icon-star.svg" alt="star-icon" />
+          </div>
+          <h1 class="card-title">How did we do?</h1>
+          <p class="card-text">
+            Please let us know how we did with your support request. All
+            feedback is appreciated to help us improve our offering!
+          </p>
+          <div class="rating-btns"></div>
+          <button class="card-action" onclick="handleSubmit()">Submit</button>
         </div>
-        <h1 class="card-title">How did we do?</h1>
-        <p class="card-text">
-          Please let us know how we did with your support request. All feedback
-          is appreciated to help us improve our offering!
-        </p>
-        <div class="rating-btns"></div>
-        <button class="card-action" onclick="handleSubmit()">Submit</button>
-      </div>
-      <div class="card-content hidden">
-        <div class="thank-img">
-          <img src="images/illustration-thank-you.svg" alt="" />
+        <div class="card-content hidden">
+          <div class="thank-img">
+            <img src="images/illustration-thank-you.svg" alt="" />
+          </div>
+          <span class="rating-text"></span>
+          <h1 class="card-title thanks-title">Thank you!</h1>
+          <p class="card-text thanks-text">
+            We appreciate you taking the time to give a rating.<br />
+            If you ever need more support, don't hesitate to<br />
+            get in touch.
+          </p>
         </div>
-        <span class="rating-text"></span>
-        <h1 class="card-title thanks-title">Thank you!</h1>
-        <p class="card-text thanks-text">
-          We appreciate you taking the time to give a rating.<br />
-          If you ever need more support, don't hesitate to<br />
-          get in touch.
-        </p>
-      </div>
-    </section>
+      </section>
+    </main>
     <script src="scripts/scripts.js"></script>
   </body>
 </html>
